<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_completed_tasks"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_prending_tasks"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.myapplication.ui.test.TestFragment"
        android:label="Manage Usres"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.myapplication.ui.statics.StatFragment"
        android:label="Stats"
        tools:layout="@layout/stat" />

    <fragment
        android:id="@+id/nav_create_project"
        android:name="com.example.myapplication.ui.create_project.CreateProjectFragment"
        android:label="Create Project"
        tools:layout="@layout/project_create" />

    <fragment
        android:id="@+id/nav_asigntasks"
        android:name="com.example.myapplication.ui.assing_tasks.assingTaskFragment"
        android:label="assign tasks"
        tools:layout="@layout/project_add" />

    <fragment
        android:id="@+id/nav_createtasks"
        android:name="com.example.myapplication.ui.create_tasks.CreatetasksFragment"
        android:label="Create tasks"
        tools:layout="@layout/project_create" />

    <fragment
        android:id="@+id/nav_tasksstatus"
        android:name="com.example.myapplication.ui.taskprogress.taskprogFragment"
        android:label="task status"
        tools:layout="@layout/tasks_prog" />
</navigation>